--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/jquery.bxslider.css" media="all" />
     <link rel="stylesheet" href="css/common.css" media="all" />
+    <link rel="stylesheet" href="css/allgallery.css" media="all" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese"
       rel="stylesheet"
@@ -223,8 +225,168 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <div id="container">
+          <div class="item type1">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption><h3>いいね数とか取得</h3></figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">title</p>
+            <p class="work-info artist-name">name</p>
+          </div>
+                  <div class="item type2">
+                    <figure>
+                      <a href="./exhibitions_page-1.html">
+                        <img src="img/ph_menu01.jpg" alt="" />
+                        <figcaption>
+                          <h3>いいね数とか取得</h3>
+                        </figcaption>
+                      </a>
+                    </figure>
+                    <p class="work-info gallery-info">テキストテキストテキスト</h3>
+                      <p class="work-info artist-name">テキストテキストテキスト</h3>
+                  </div>
+          <div class="item type4">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">the world</h3>
+              <p class="work-info artist-name">吉岡　計</h3>
+          </div>
+          <div class="item type5">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">the world</h3>
+              <p class="work-info artist-name">吉岡　計</h3>
+          </div>
+          <div class="item type6">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">the world</h3>
+              <p class="work-info artist-name">吉岡　計</h3>
+          </div>
+          <div class="item type9">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">the world</h3>
+              <p class="work-info artist-name">吉岡　計</h3>
+          </div>
+          <div class="item type7">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">the world</h3>
+              <p class="work-info artist-name">吉岡　計</h3>
+          </div>
+          <div class="item type8">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">the world</h3>
+              <p class="work-info artist-name">吉岡　計</h3>
+          </div>
+          <div class="item type9">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">the world</h3>
+              <p class="work-info artist-name">吉岡　計</h3>
+          </div>
+          <div class="item type10">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">the world</h3>
+              <p class="work-info artist-name">吉岡　計</h3>
+          </div>
+  
+        </div>
+  
+        <!-- 読み込み中のヤツ -->
+        <div class="cmn__loader-wrap infinite-loader exhibits">
+          <div class="wavy-loader">
+            <div class="loader"><span></span></div>
+          </div>
+        </div>
+      </section>
+  
     </div>
 
     <div id="common_footer"></div>
+
+    <script src="./js/isotope.pkgd.min.js"></script>
+
+    <script>
+      // Isotopeの初期化処理
+      $(function() {
+        var $container = $("#container");
+        $("#container").isotope({
+          itemSelector: ".item",
+          // percentPosition: true,
+          layoutMode: "fitRows",
+          masonry: {
+            columnWidth: 300,
+            isFitWidth: true  //親要素の幅に合わせてカラム数を自動調整するかしないか
+          },
+          
+        });
+        // jQueryを使って、クリックイベントを追加
+        $("#filters").on("click", "button", function() {
+          //クリックしたボタンのdata-filterの値を変数に格納します
+          var filterValue = $(this).attr("data-filter");
+          //ここでオプションのfilterを発動させています。
+          //date-filterの値を使ってフィルタリングを行います。
+          $container.isotope({ filter: filterValue });
+        });
+      });
+    </script>
+
   </body>
 </html>
