--- a/index.html
+++ b/index.html
@@ -22,20 +22,10 @@
     <link rel="stylesheet" href="css/jquery.bxslider.css" media="all" />
     <link rel="stylesheet" href="css/common.css" media="all" />
     <link rel="stylesheet" href="css/allgallery.css" media="all" />
-
     <link
       href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese"
       rel="stylesheet"
     />
-    <!-- javascript -->
-    <script src="./js/jQuery.js"></script>
-    <script src="./js/fadein.js"></script>
-    <script>
-      $(function() {
-        $('#common_nav').load('nav.html')
-        $('#common_footer').load('footer.html')
-      })
-    </script>
   </head>
 
   <body>
@@ -106,150 +96,37 @@
         </div>
       </section>
 
+
       <section id="main2" class="main2-cont">
-        <div id="half-under" class="wrap">
           <h2 class="heading">こちらもおすすめ</h2>
-          <ul class="menu-divst2">
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-1.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-1.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-2.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-3.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-4.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-5.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-6.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-7.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-8.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-9.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-10.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-            <li class="main2-item">
-              <figure>
-                <a href="./exhibitions_page-11.html">
-                  <img src="img/ph_menu01.jpg" alt="" />
-                  <figcaption><h3>いいね数とか取得</h3></figcaption>
-                </a>
-              </figure>
-              <p class="menu-info">個展名</p>
-            </li>
-          </ul>
-
-          <div class="six col">
-            <a href="#" class="button" id="button-4">もっと見る</a>
-          </div>
-        </div>
-      </section>
-
-      <section>
         <div id="container">
+
+
+
           <div class="item type1">
             <figure>
               <a href="./exhibitions_page-1.html">
                 <img src="img/ph_menu01.jpg" alt="" />
-                <figcaption><h3>いいね数とか取得</h3></figcaption>
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
               </a>
             </figure>
             <p class="work-info gallery-info">title</p>
             <p class="work-info artist-name">name</p>
           </div>
-                  <div class="item type2">
-                    <figure>
-                      <a href="./exhibitions_page-1.html">
-                        <img src="img/ph_menu01.jpg" alt="" />
-                        <figcaption>
-                          <h3>いいね数とか取得</h3>
-                        </figcaption>
-                      </a>
-                    </figure>
-                    <p class="work-info gallery-info">テキストテキストテキスト</h3>
-                      <p class="work-info artist-name">テキストテキストテキスト</h3>
-                  </div>
+          <div class="item type2">
+            <figure>
+              <a href="./exhibitions_page-1.html">
+                <img src="img/ph_menu01.jpg" alt="" />
+                <figcaption>
+                  <h3>いいね数とか取得</h3>
+                </figcaption>
+              </a>
+            </figure>
+            <p class="work-info gallery-info">テキストテキストテキスト</h3>
+              <p class="work-info artist-name">テキストテキストテキスト</h3>
+          </div>
           <div class="item type4">
             <figure>
               <a href="./exhibitions_page-1.html">
@@ -259,8 +136,8 @@
                 </figcaption>
               </a>
             </figure>
-            <p class="work-info gallery-info">the world</h3>
-              <p class="work-info artist-name">吉岡　計</h3>
+            <p class="work-info gallery-info"></h3>
+              <p class="work-info artist-name">吉岡　shouhei</h3>
           </div>
           <div class="item type5">
             <figure>
@@ -334,32 +211,47 @@
             <p class="work-info gallery-info">the world</h3>
               <p class="work-info artist-name">吉岡　計</h3>
           </div>
-          <div class="item type10">
-            <figure>
-              <a href="./exhibitions_page-1.html">
-                <img src="img/ph_menu01.jpg" alt="" />
-                <figcaption>
-                  <h3>いいね数とか取得</h3>
-                </figcaption>
-              </a>
-            </figure>
-            <p class="work-info gallery-info">the world</h3>
-              <p class="work-info artist-name">吉岡　計</h3>
-          </div>
-  
+        
         </div>
-  
+        
         <!-- 読み込み中のヤツ -->
         <div class="cmn__loader-wrap infinite-loader exhibits">
           <div class="wavy-loader">
             <div class="loader"><span></span></div>
           </div>
         </div>
+
+          <div class="six col">
+            <a href="./allgallery.html" class="button" id="button-4">もっと見る</a>
+          </div>
       </section>
-  
     </div>
 
+  
+
+
     <div id="common_footer"></div>
+
+
+
+
+
+
+
+
+
+
+
+        <!-- javascript -->
+        <script src="./js/jQuery.js"></script>
+        <script src="./js/fadein.js"></script>
+        <script>
+          $(function () {
+            $('#common_nav').load('nav.html')
+            $('#common_footer').load('footer.html')
+          })
+        </script>
+
 
     <script src="./js/isotope.pkgd.min.js"></script>
 
@@ -379,10 +271,10 @@
         });
         // jQueryを使って、クリックイベントを追加
         $("#filters").on("click", "button", function() {
-          //クリックしたボタンのdata-filterの値を変数に格納します
+          //クリックしたボタンのdata-filterの値を変数に格納
           var filterValue = $(this).attr("data-filter");
-          //ここでオプションのfilterを発動させています。
-          //date-filterの値を使ってフィルタリングを行います。
+          //ここでオプションのfilterを発動
+          //date-filterの値でフィルタリング
           $container.isotope({ filter: filterValue });
         });
       });
