発表用に画像収集、タイルレイアウトの確認、top画像およびメイン１の編集

--- a/nav.html
+++ b/nav.html
@@ -15,7 +15,7 @@
     <li class="gnav-item item1"><a href="./index.html">あな持ち</a></li>
     <li class="gnav-item item2"></li>
     <li class="gnav-item item3">
-      <a href="#"><img src="img/icon/kensaku.png"/></a>
+      <a href="./allgallery.html"><img src="img/icon/kensaku.png"/></a>
     </li>
     <li>
       <div id="menu_head">
