--- a/exhibitions_page-1 - コピー.html
+++ b/exhibitions_page-1 - コピー.html
@@ -33,37 +33,28 @@
 
 
   <header>
-    <ul class="bxslider">
-      <li>
-        <a href="./img/item/lubitel_1.jpg" data-fancybox>
-          <img src="./img/item/lubitel_1.jpg" /></a>
-        <p><br />My camera.<br />2015.04.19</p>
-      </li>
-      <li>
-        <a href="./img/item/lubitel2.jpg" data-fancybox>
-          <img src="./img/item/lubitel2.jpg" /></a>
-        <p><br /><br />sony α6000/ISO 120</p>
-      </li>
-      <li>
-        <a href="./img/item/lubitel_3.jpg" data-fancybox>
-          <img src="./img/item/lubitel_3.jpg" /></a>
-        <p><br />xxxxxxx<br />2015.07.09</p>
-      </li>
-      <li>
-        <a href="./img/item/lubitel_4.png" data-fancybox>
-          <img src="./img/item/lubitel_4.png" /></a>
-      </li>
-      <li>
-        <a href="./img/item/lubitel_5.jpg" data-fancybox>
-          <img src="./img/item/lubitel_5.jpg" /></a>
-      </li>
-      <li>
-        <a href="./img/item/lubitel_6.jpg" data-fancybox>
-          <img src="./img/item/lubitel_6.jpg" /></a>
-        <p><br />xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br />sony α6000/ISO 120xxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-      </li>
-
-    </ul>
+<ul class="bxslider">
+  <li>
+    <img src="./img/IMG_9759.JPG" />
+    <p><br />写真のタイトル<br />日時、撮影機材など</p>
+  </li>
+  <li>
+    <img src="./img/IMG_9759.JPG" />
+    <p><br />写真のタイトル<br />日時、撮影機材など</p>
+  </li>
+  <li>
+    <img src="./img/IMG_9759.JPG" />
+    <p><br />写真のタイトル<br />日時、撮影機材など</p>
+  </li>
+  <li>
+    <img src="./img/IMG_9759.JPG" />
+    <p><br />写真のタイトル<br />日時、撮影機材など</p>
+  </li>
+  <li>
+    <img src="./img/IMG_9759.JPG" />
+    <p><br />写真のタイトル<br />日時、撮影機材など</p>
+  </li>
+</ul>
   </header>
 
   <div class="contents">
@@ -73,41 +64,41 @@
       </a>
     </p>
 
-    <section id="main1" class="main1-cont">
-      <div class="exhibition-show__info-wrap" id="exhibitionInfo">
-        <div class="exhibition-show__info">
-          <div class="exhibition-show__info-head">
-            <div class="exhibition-show__info-txt">
-              <div class="exhibition-show__info-name-wrap">
-                <div class="exhibition-show__info-name-img-box">
-                  <a class="exhibition-show__info-name-img-link" href="/fa1466197016820559"><img width="30" height="30"
-                      alt="fa1466197016820559" class="img" src="img/icon/シャッターアイコン4 (2) - コピー.png">
-                  </a>
-                </div>
-                <a class="exhibition-show__info-name" href="/fa1466197016820559">romonomawasimono</a>
-              </div>
-              <h1 class="exhibition-show__info-tit">
-                <span class="txt">My camera</span>
-              </h1>
+<section id="main1" class="main1-cont">
+  <div class="exhibition-show__info-wrap" id="exhibitionInfo">
+    <div class="exhibition-show__info">
+      <div class="exhibition-show__info-head">
+        <div class="exhibition-show__info-txt">
+          <div class="exhibition-show__info-name-wrap">
+            <div class="exhibition-show__info-name-img-box">
+              <a class="exhibition-show__info-name-img-link" href="/fa1466197016820559"><img width="30" height="30" alt="fa1466197016820559"
+                  class="img" src="https://s3-ap-northeast-1.amazonaws.com/coten.images/users/3c2d1534464382.jpg" />
+              </a>
+            </div>
+            <a class="exhibition-show__info-name" href="/fa1466197016820559">展示主</a>
+          </div>
+          <h1 class="exhibition-show__info-tit">
+            <span class="txt">展示タイトル展示タイトル展示タイトル</span>
+          </h1>
+        </div>
+      </div>
+      <div class="exhibition-show__info-intro">
+        展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント展示コメント
+      </div>
+      <div class="exhibition-show__info-term">- 2018.12.17 21:28</div>
+
+      <div class="exhibition-show__info-foot">
+        <div class="exhibition-show__info-foot-reactions">
+          <div class="exhibition-show__info-foot-reactions-btn like" id="likeBtn" onclick="sayLikeToExhibition(this)">
+            <div class="txt">Like</div>
+            <div class="icon-svg_like_n svg">
+              <button id="sampleButtonB" class="goodButton">
+                <img src="./img/icon/good.png" />
+              </button>
+              <span id="sampleOutputB" style="font-size: 60%;">0</span>
             </div>
           </div>
-          <div class="exhibition-show__info-intro">
-            丈夫で使いやすい良いカメラです。
-          </div>
-          <div class="exhibition-show__info-term">- 2018.12.17 21:28</div>
-
-          <div class="exhibition-show__info-foot">
-            <div class="exhibition-show__info-foot-reactions">
-              <div class="exhibition-show__info-foot-reactions-btn like" id="likeBtn" onclick="sayLikeToExhibition(this)">
-                <div class="txt">Like</div>
-                <div class="icon-svg_like_n svg">
-                  <button id="sampleButtonB" class="goodButton">
-                    <img src="./img/icon/good.png" />
-                  </button>
-                  <span id="sampleOutputB" style="font-size: 60%;">0</span>
-                </div>
-              </div>
-              <!--
+          <!--
                   <div
                     class="exhibition-show__info-foot-reactions-count like"
                     id="likeCount"
@@ -117,47 +108,47 @@
                   </div>
                 -->
 
-              <div class="exhibition-show__info-foot-reactions-btn comment" id="commentBtn" onclick="showCommentModal('post')">
-                <div class="txt">Comment</div>
-                <div class="svg icon-svg_comment">
-                  <a href="#"><img src="./img/icon/comment.png" /></a>
-                </div>
-              </div>
-              <div class="exhibition-show__info-foot-reactions-count comment" data="[8148, 8149, 8168, 8169, 8171, 8192, 8212, 8216, 8294, 8324]"
-                id="commentCount">
-                10
-              </div>
-            </div>
-
-            <!-- SNS共有メニュー -->
-            <div class="exhibition-show__info-foot-menu-btn">
-              <div class="exhibition-show__info-foot-dropdown-btn cmn__share-dropdown-btn cmn__dropdown-btn" id="shareDropdownBtn">
-                <div class="txt">Menu</div>
-                <div class="svg icon-svg_menu">
-                  <img src="./img/icon/sns_menu.png" />
-                </div>
-              </div>
-              <ul class="exhibition-show__info-foot-menu cmn__share-dropdown-menu cmn__dropdown-wrap" id="shareDropdown">
-                <li class="exhibition-show__info-foot-menu-item share">
-                  <a target="_blank" class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in fb"
-                    title="Facebookで共有" onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
-                    href="http://www.facebook.com/dialog/feed?app_id=1684914615163108&amp;link=https://coten.pics/exhibitions/6759&amp;picture=https://s3-ap-northeast-1.amazonaws.com/coten.images/picture/6759/s_pic2fd24a67-a997-42b0-afba-7594f0facc03.jpg&amp;name=Life%20is%20Beautiful%20027 by %E6%9D%BE%E4%B8%8B%20%E3%83%9E%E3%82%B5%E3%82%AD - 個展&amp;caption=coten&amp;description=松下 マサキの個展。開催期間は2018年12月17日(月) 21時28分まで。&amp;display=page">facebook</a>
-                </li>
-                <li class="exhibition-show__info-foot-menu-item share">
-                  <a target="_blank" class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in twt"
-                    title="twitterで共有" onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
-                    href="https://twitter.com/intent/tweet?text=Life%20is%20Beautiful%20027 by %E6%9D%BE%E4%B8%8B%20%E3%83%9E%E3%82%B5%E3%82%AD - 個展%0a&amp;url=https://coten.pics/exhibitions/6759&amp;hashtags=coten">twitter</a>
-                </li>
-                <li class="exhibition-show__info-foot-menu-item share">
-                  <a class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in ggl" title="instagramで共有"
-                    onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
-                    href="https://plus.google.com/share?url=https://coten.pics/exhibitions/6759">instagram</a>
-                </li>
-                <li class="exhibition-show__info-foot-menu-btn-wrap cmn__share-dropdown-menu-btn-wrap"></li>
-              </ul>
+          <div class="exhibition-show__info-foot-reactions-btn comment" id="commentBtn" onclick="showCommentModal('post')">
+            <div class="txt">Comment</div>
+            <div class="svg icon-svg_comment">
+              <a href="#"><img src="./img/icon/comment.png" /></a>
             </div>
           </div>
-          <!--
+          <div class="exhibition-show__info-foot-reactions-count comment" data="[8148, 8149, 8168, 8169, 8171, 8192, 8212, 8216, 8294, 8324]"
+            id="commentCount">
+            10
+          </div>
+        </div>
+
+        <!-- SNS共有メニュー -->
+        <div class="exhibition-show__info-foot-menu-btn">
+          <div class="exhibition-show__info-foot-dropdown-btn cmn__share-dropdown-btn cmn__dropdown-btn" id="shareDropdownBtn">
+            <div class="txt">Menu</div>
+            <div class="svg icon-svg_menu">
+              <img src="./img/icon/sns_menu.png" />
+            </div>
+          </div>
+          <ul class="exhibition-show__info-foot-menu cmn__share-dropdown-menu cmn__dropdown-wrap" id="shareDropdown">
+            <li class="exhibition-show__info-foot-menu-item share">
+              <a target="_blank" class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in fb"
+                title="Facebookで共有" onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
+                href="http://www.facebook.com/dialog/feed?app_id=1684914615163108&amp;link=https://coten.pics/exhibitions/6759&amp;picture=https://s3-ap-northeast-1.amazonaws.com/coten.images/picture/6759/s_pic2fd24a67-a997-42b0-afba-7594f0facc03.jpg&amp;name=Life%20is%20Beautiful%20027 by %E6%9D%BE%E4%B8%8B%20%E3%83%9E%E3%82%B5%E3%82%AD - 個展&amp;caption=coten&amp;description=松下 マサキの個展。開催期間は2018年12月17日(月) 21時28分まで。&amp;display=page">facebook</a>
+            </li>
+            <li class="exhibition-show__info-foot-menu-item share">
+              <a target="_blank" class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in twt"
+                title="twitterで共有" onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
+                href="https://twitter.com/intent/tweet?text=Life%20is%20Beautiful%20027 by %E6%9D%BE%E4%B8%8B%20%E3%83%9E%E3%82%B5%E3%82%AD - 個展%0a&amp;url=https://coten.pics/exhibitions/6759&amp;hashtags=coten">twitter</a>
+            </li>
+            <li class="exhibition-show__info-foot-menu-item share">
+              <a class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in ggl" title="instagramで共有"
+                onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
+                href="https://plus.google.com/share?url=https://coten.pics/exhibitions/6759">instagram</a>
+            </li>
+            <li class="exhibition-show__info-foot-menu-btn-wrap cmn__share-dropdown-menu-btn-wrap"></li>
+          </ul>
+        </div>
+      </div>
+      <!--
               <div class="comments__list-wrap" id="commentListWrap">
                 <div class="comments__list-in">
                   <div
@@ -174,7 +165,7 @@
               </div>
             -->
 
-          <!--
+      <!--
               <ul class="exhibition-show__tags">
                 <li
                   class="exhibition-show__tag"
@@ -214,9 +205,9 @@
                 </li>
               </ul>
             -->
-        </div>
-      </div>
-      <!--
+    </div>
+  </div>
+  <!--
           <div class="exhibition-show__signup">
             <div class="exhibition-show__signup-tit">さあ、あなたも！</div>
             <div class="exhibition-show__signup-txt">
@@ -228,7 +219,7 @@
           </div>
         -->
 
-      <!--
+  <!--
           <div class="flyers__wrap gallery">
             <div class="flyers__in">
               <h2 class="flyers__tit">こちらもおすすめ</h2>
@@ -244,13 +235,13 @@
             </div>
           </div>
         -->
-    </section>
+</section>
     <section id="main2" class="main2-cont">
       <h2 class="heading">こちらもおすすめ</h2>
       <div id="container">
 <div class="item type1">
   <figure>
-    <a href="./exhibitions_page-1.html">
+    <a href="./exhibitions_page-1 - コピー.html">
       <img src="img/item/キャンプ食器.jpg" alt="" />
       <figcaption>
         <h3>いいね数とか取得</h3>
