最終確認と、細かな修正

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="title">
       <p id="toptext">あなたの</p>
       <h1>持ちモノ写真展</h1>
-      <h2>テキストテキストテキストテキスト</h2>
+      <h2> Now, please exhibit your ITEMS to us !</h2>
     </div>
   </header>
 
@@ -53,7 +53,7 @@
 
           <li class="main1-item">
             <a href="#">
-              <img src="img/item/デジカメ、文具.jpg" alt="" />
+              <img src="img/item/メイン_感想.jpg" alt="" />
               <!-- <h4 class="menu-text middle-one">感想</h4> -->
             </a>
 <p class="menu-info">感想</p>
@@ -61,7 +61,7 @@
 
           <li class="main1-item">
             <a href="#">
-              <img src="img/item/A7.jpg" alt="" />
+              <img src="img/item/メイン_撮影風景.jpg" alt="" />
               <!-- <h4 class="menu-text right-one">作業風景、撮影仲間</h4> -->
             </a>
 <p class="menu-info">作業風景、自己紹介
