スクロールに合わせた遅延表示など色々試すが、惨敗。...もしかして、isotopeの適応する範囲には他のプラグインが無効化される？

--- a/exhibitions_page-1.html
+++ b/exhibitions_page-1.html
@@ -39,42 +39,79 @@
     <header>
       <ul class="bxslider">
         <li>
-          <a href="./img/item/lubitel_1.jpg" data-fancybox>
+          <a rel="group01" href="./img/item/lubitel_1.jpg" data-fancybox>
             <img src="./img/item/lubitel_1.jpg"
           /></a>
           <p><br />My camera.<br />2015.04.19</p>
         </li>
         <li>
-          <a href="./img/item/lubitel2.jpg" data-fancybox>
+          <a rel="group01" href="./img/item/lubitel2.jpg" data-fancybox>
             <img src="./img/item/lubitel2.jpg"
           /></a>
           <p><br /><br />sony α6000/ISO 120</p>
         </li>
         <li>
-          <a href="./img/item/lubitel_3.jpg" data-fancybox>
+          <a rel="group01" href="./img/item/lubitel_3.jpg" data-fancybox>
             <img src="./img/item/lubitel_3.jpg"
           /></a>
           <p><br />xxxxxxx<br />2015.07.09</p>
         </li>
         <li>
-          <a href="./img/item/lubitel_4.png" data-fancybox>
+          <a rel="group01" href="./img/item/lubitel_4.png" data-fancybox>
             <img src="./img/item/lubitel_4.png"
           /></a>
         </li>
         <li>
-          <a href="./img/item/lubitel_5.jpg" data-fancybox>
+          <a rel="group01" href="./img/item/lubitel_5.jpg" data-fancybox>
             <img src="./img/item/lubitel_5.jpg"
           /></a>
         </li>
         <li>
-          <a href="./img/item/lubitel_6.jpg" data-fancybox>
-            <img src="./img/item/lubitel_6.jpg"
+          <a rel="group01" href="./img/item/lubitel_6.JPG" data-fancybox>
+            <img src="./img/item/lubitel_6.JPG"
+          /></a>
+          <p>
+            <br />xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br />sony α6000/ISO
+            120xxxxxxxxxxxxxxxxxxxxxxxxxx
+          </p>
+        </li>        <li>
+          <a rel="group01" href="./img/item/lubitel_1.jpg" data-fancybox>
+            <img src="./img/item/lubitel_1.jpg"
+          /></a>
+          <p><br />My camera.<br />2015.04.19</p>
+        </li>
+        <li>
+          <a rel="group01" href="./img/item/lubitel2.jpg" data-fancybox>
+            <img src="./img/item/lubitel2.jpg"
+          /></a>
+          <p><br /><br />sony α6000/ISO 120</p>
+        </li>
+        <li>
+          <a rel="group01" href="./img/item/lubitel_3.jpg" data-fancybox>
+            <img src="./img/item/lubitel_3.jpg"
+          /></a>
+          <p><br />xxxxxxx<br />2015.07.09</p>
+        </li>
+        <li>
+          <a rel="group01" href="./img/item/lubitel_4.png" data-fancybox>
+            <img src="./img/item/lubitel_4.png"
+          /></a>
+        </li>
+        <li>
+          <a rel="group01" href="./img/item/lubitel_5.jpg" data-fancybox>
+            <img src="./img/item/lubitel_5.jpg"
+          /></a>
+        </li>
+        <li>
+          <a rel="group01" href="./img/item/lubitel_6.JPG" data-fancybox>
+            <img src="./img/item/lubitel_6.JPG"
           /></a>
           <p>
             <br />xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br />sony α6000/ISO
             120xxxxxxxxxxxxxxxxxxxxxxxxxx
           </p>
         </li>
+
       </ul>
     </header>
 
@@ -420,6 +457,7 @@
             <p class="work-info gallery-info">title</p>
             <p class="work-info artist-name">creator name</p>
           </div>
+          
         </div>
 
         <!-- 読み込み中のヤツ -->
@@ -443,6 +481,7 @@
     <script src="./js/fadein.js"></script>
 
     <script type="text/javascript">
+    // スライドショー設定
       $(document).ready(function() {
         $(".bxslider").bxSlider({
           auto: false,
