--- a/exhibitions_page-1 - コピー.html
+++ b/exhibitions_page-1 - コピー.html
@@ -13,9 +13,10 @@
   <link rel="icon" sizes="192x192" href="./img/icon/シャッターアイコン4 (2).png" />
 
   <!-- stylesheets -->
-  <link rel="stylesheet" href="css/exhibitions_page.css" media="all" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese" rel="stylesheet" />
   <link rel="stylesheet" href="css/common.css" media="all" />
+  <link rel="stylesheet" href="css/exhibitions_page.css" media="all" />
+  <!-- jquery適用箇所へのCSS -->
   <link rel="stylesheet" type="text/css" href="./css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/jquery.bxslider.css" media="all" />
 
